# icarus

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md  attacks.md  defenses.md  results.md  threat_model.md
icarus/: __init__.py
icarus/agent/: agent.py  prompts.py
icarus/data/: db_manager.py
icarus/mcp_servers/vulnerable/: server.py
