[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icarus"
version = "0.1.0"
description = "MCP Threat Lab — attack/defense research environment for the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Lin"}]
keywords = ["mcp", "ai-security", "prompt-injection", "guardrails", "llm-security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    # Core
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",

    # MCP
    "mcp>=1.0.0",
    "fastmcp>=0.4.0",

    # Sentinel server
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",

    # UI
    "streamlit>=1.30.0",

    # Auth
    "bcrypt>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]
eval = [
    "pyyaml>=6.0",
    "rich>=13.7",
]

[project.urls]
Repository = "https://github.com/u4o-d/icarus"
Documentation = "https://github.com/u4o-d/icarus/tree/main/docs"
Issues = "https://github.com/u4o-d/icarus/issues"

[tool.setuptools.packages.find]
include = ["icarus*"]
exclude = ["tests*", "eval*", "simulations*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
